# drf-api-permissions-postgres

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
blogapi_postgres/: settings.py  urls.py
historical_characters/: apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
historical_characters/migrations/: 0001_initial.py
